# Jetline

./: .gitignore  Base.py  CHANGELOG.txt  License  MANIFEST.in  README.md  README.txt  builder.txt  input.txt  requirements.txt  setup.py  test.html  toto.md
docs/: index.html  test.html
docs/Writerside/: jetline.tree  redirection-rules.xml  writerside.cfg
docs/Writerside/cfg/: buildprofiles.xml
docs/Writerside/topics/: Commands.md  Overview.topic  Terminal-Commands.topic
env/: pyvenv.cfg
examples/fruits/: data.py  main.py  project.toml
examples/fruits/output/: fruits.txt
jetline/: logging.py  requirements.txt
jetline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jetline/commands/: _helper.py  analyze_project.py  analyzer.py  create_pipe.py  create_viz.py  installer.py  run_pipeline.py  to_exe.py
jetline/commands/analyzer/: direction_builder.py
jetline/data/: data.py  helper.py
jetline/pipeline/: node.py  pipeline.py
jetline/templates/: data.py  main.py  nodes.py  pipeline.py
jetline/visualization/: server.py
kdc-pipline/: play.py  project.toml
kiper/commands/: installer.py
kiper/data/: data.py
kiper/pipeline/: node.py  pipeline.py
kiper/templates/: data.py  example_node.py  main.py  pipeline.py
pipelines/asd/: pipeline.py
pipelines/asd copy/: pipeline.py
project/: analyzer.py  data.py  exe.py  main.py  project.toml  viz-data.json
project copy/: README.md  pyproject.toml  requirements.txt
project copy/conf/: logging.yml
project copy/src/project/: __init__.py  __main__.py
(+57 files in other folders)
